# ferrum

./: .gitignore  CHANGELOG.md  Cargo.toml  PRODUCTION_READINESS.md  README.md
.github/workflows/: ci.yml
ferrum-fmt/: Cargo.toml  README.md
ferrum-fmt/examples/: basic_format.rs
ferrum-fmt/src/: config.rs  formatter.rs  lib.rs  main.rs
ferrum-fmt/tests/: integration_tests.rs
fortran-ast/: Cargo.toml  README.md
fortran-ast/src/: analysis.rs  declaration.rs  expression.rs  lib.rs  literal.rs  program.rs  span.rs  statement.rs  visitor.rs
fortran-lexer/: Cargo.toml  README.md
fortran-lexer/benches/: lexer_bench.rs
fortran-lexer/examples/: basic_tokenize.rs
fortran-lexer/src/: error.rs  lexer.rs  lib.rs  token.rs
fortran-lexer/tests/: integration_tests.rs
fortran-parser/: Cargo.toml  README.md
fortran-parser/benches/: parser_bench.rs
fortran-parser/examples/: README.md  basic_parse.rs  dead_code_analyzer.rs  error_handling.rs  extract_docs.rs  extract_signature.rs  fixed_to_free.rs  scientific_computing.rs  type_mapper.rs
fortran-parser/src/: error.rs  lib.rs  main.rs  parser.rs
fortran-parser/tests/: integration_tests.rs
