[workspace]
members = ["fortran-ast",
    "fortran-lexer", "fortran-parser", "ferrum-fmt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Marco Zaccaria Di Fraia <marco.z.difraia@gmail.com>"]
license = "MIT"
repository = "https://github.com/MarsZDF/ferrum"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

