[package]
name = "fortran-lexer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Fast, modular lexer for FORTRAN source code supporting both fixed-format and free-format FORTRAN"
keywords = ["fortran", "lexer", "tokenizer", "compiler", "parser"]
categories = ["parsing", "development-tools"]

[dependencies]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "lexer_bench"
harness = false
