[package]
name = "fortran-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Recursive descent parser for FORTRAN source code"
keywords = ["fortran", "parser", "compiler", "ast"]
categories = ["parsing", "development-tools"]

[dependencies]
fortran-lexer = { path = "../fortran-lexer" }
fortran-ast = { path = "../fortran-ast" }
